fixed vertical alignment of emoticon

--- a/src/styles/sass/EmptyNotifier.scss
+++ b/src/styles/sass/EmptyNotifier.scss
@@ -3,6 +3,9 @@
     margin-top: 50px;
     h3 {
         color: #ccc;
+        i {
+            vertical-align: middle;
+        }
     }
     p {
         color: #ccc;
